# FoxClip

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  print_code_tree.bat
.github/: pull_request_template.md
.github/actions/build-plugin/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
cmake/FoxclipPluginHeaders/: FoxclipPluginHeadersConfig.cmake.in  FoxclipPluginHeadersTargets.cmake.in
cmake/macos/: xcode.cmake
data/locale/: en-US.ini  ja-JP.ini
include/foxclip/: log.h  plugin_api.h  recording.h
include/foxclip/core/: export.h  version.h
include/foxclip/log/: level.h  log.h
include/foxclip/recording/: error.h  events.h  start.h
include/foxclip/ui/: menu.h
installer/: windows-installer.nsi
src/: LICENSE  plugin-main.cpp
src/app/: plugin-main.cpp
src/features/plugin_host/app/: PluginHostFacade.cpp  PluginHostFacade.h
src/features/plugin_host/domain/: IPluginHost.h
src/features/plugin_host/infrastructure/: DynamicPluginHost.cpp  DynamicPluginHost.h  FoxclipPluginHost.cpp  FoxclipPluginHost.h  MultiPluginHost.h  MultiPluginHostImpl.cpp  MultiPluginHostImpl.h  PluginFolderLogger.h  ThreadedPlugin.h
src/features/plugin_loader/app/: LoaderFacade.cpp  LoaderFacade.h  LoaderFacadeMulti.cpp  LoaderFacadeMulti.h  ValidationInputFactory.cpp  ValidationInputFactory.h
src/features/plugin_loader/domain/: LoadTypes.h  Manifest.h  ManifestReader.h  ManifestValidator.cpp  ManifestValidator.h
src/features/plugin_loader/infrastructure/: NlohmannManifestReader.cpp  NlohmannManifestReader.h
src/features/startup_check/app/: StartupCheckFacade.cpp  StartupCheckFacade.h  StartupCheckService.cpp  StartupCheckService.h
src/features/startup_check/domain/: DirectoryCreator.h  DirectoryPolicy.h  Result.h  StartupCheckService.cpp  StartupCheckService.h
src/features/startup_check/infrastructure/: EnsurePluginDir.cpp  EnsurePluginDir.h  StdFsDirectoryChecker.cpp  StdFsDirectoryChecker.h  StdFsDirectoryCreator.cpp  StdFsDirectoryCreator.h
src/infra_shared/common/domain/: Result.h
src/infra_shared/config/path/: ObsConfigPathProvider.cpp  ObsConfigPathProvider.h
src/infra_shared/fs/: DirectoryLister.cpp  DirectoryLister.h  FileStore.cpp  FileStore.h  FsUtils.cpp  FsUtils.h  PathResolver.cpp  PathResolver.h
src/infra_shared/fs/app/: FileService.h
src/infra_shared/fs/domain/: IFileSystem.h  Path.cpp  Path.h
src/infra_shared/fs/infrastructure/: StandardFileSystem.h
src/infra_shared/fs/roots/: IRootProvider.h  ObsConfigRootProvider.cpp  ObsConfigRootProvider.h
src/infra_shared/log/: ObsLogger.c  ObsLogger.h
src/infra_shared/log/app/: LogService.cpp  LogService.h
src/infra_shared/log/domain/: ILogger.h
src/infra_shared/log/infrastructure/: ObsLoggerAdapter.h  ObsLoggerImpl.cpp  ObsLoggerImpl.h
src/infra_shared/plugin/: FoxclipPluginHost.cpp  FoxclipPluginHost.h  HostApiV1.cpp  HostApiV1.h  ModuleLoader.cpp  ModuleLoader.h  MultiPluginHost.cpp  MultiPluginHost.h  PluginFolderLogger.cpp  PluginFolderLogger.h  ThreadedPlugin.cpp  ThreadedPlugin.h
src/infra_shared/startup/: EnsurePluginDir.cpp  EnsurePluginDir.h
src/infra_shared/support/: plugin-support.c.in
src/infra_shared/ui/common/domain/: UiTypes.h
src/infra_shared/ui/core/app/: UiCoordinator.cpp  UiCoordinator.h
src/infra_shared/ui/core/domain/: IUiFramework.h
src/infra_shared/ui/core/infrastructure/qt/: QtUiFramework.h
src/infra_shared/ui/menu/app/: ObsMenuRegistry.cpp  ObsMenuRegistry.h
src/infra_shared/ui/menu/domain/: MenuTypes.h
src/infra_shared/ui/window/app/: WindowFacade.cpp  WindowFacade.h
src/infra_shared/ui/window/domain/: IWindow.h
src/infra_shared/ui/window/infrastructure/qt/: QtHelloWindow.cpp  QtHelloWindow.h
src/infra_shared/version/: Semver.cpp  Semver.h
src/infra_shared/version/app/: VersionService.h
src/infra_shared/version/domain/: IVersionProvider.h  Semver.cpp  Semver.h
src/public_api/log/: FoxclipLogApi.c
src/public_api/recorder/: FoxclipRecorderApi.c
src/public_api/ui/: FoxclipMenuApi.cpp
